# ProbeFlow

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  constraints.txt  pyproject.toml  review_stage1_workflow_physics_findings.md  review_stage2_architecture_repetition_findings.md  roadmap_architecture_proposal.md  whitelist.py
.claude/commands/: numerical-stability.md  physics-check.md
.github/workflows/: build-windows.yml  ci.yml  dependency-canary.yml
_delete/: A221126.123040.probeflow.json  A260317.provenance.json
anonymised_testdata/: createc_ivt_telegraph_300mv_a.VERT  createc_ivt_telegraph_300mv_b.VERT  createc_ivt_telegraph_450mv.VERT  sxm_moire_10nm.sxm
data/: A180201.124928.VERT  A180201.151737.M0001.VERT  A180201.152542.M0001.VERT  A180208.194656.M0003.VERT
docs/: adstat_integration.md  adstat_user_guide.md  cli.md  core_derisk_plan.md  createc_dat_reader.md  dead_code_audit.md  gui.md  maintenance.md  particle_statistics_tutorial_flow.md  refocus_plan.md  review_status.md  roi_manual_test_checklist.md  stage1_workflow_physics_fixes.md
docs/notes/: roi-display-notes.md
docs/reviews/: 2026-05-27-architecture-backend.md  2026-05-27-architecture-gui.md  2026-05-27-image-processing.md  2026-05-27-index.md  2026-05-27-io.md  2026-05-27-numerical.md  2026-05-27-physics.md  2026-07-06-dataset-builder-review.md
nanonis_tools/: gui.py  processing.py
packaging/: THIRD_PARTY_NOTICES.md  runtime_licenses.toml
packaging/macos/: ProbeFlow.icns  ProbeFlow.spec  QT_LGPL_COMPLIANCE.md  README.md  app_metadata.toml  constraints-arm64.txt  release_notes_1.0.0rc1.md  requirements-build.txt  runtime_licenses.toml
packaging/pyinstaller-hooks/: hook-PySide6.QtGui.py
packaging/windows/: ProbeFlow.nsi  ProbeFlow.spec  QT_LGPL_COMPLIANCE.md  README.md  app_metadata.toml  constraints-x64.txt  release_notes_1.0.0rc1.md  requirements-build.txt  version_info.txt
probeflow/: __init__.py  cli.py  common.py  dat_sxm.py  display_state.py  file_type.py  gui.py  gui_processing.py  gui_rendering.py  metadata.py  processing.py  processing_state.py  scan.py  spec_io.py  spec_plot.py  spec_processing.py  sxm_io.py
probeflow/analysis/: __init__.py  adstat_adapter.py  feature_bank.py  feature_finder.py  feature_lattice.py  features.py  grains.py  helpers.py  lattice.py  lattice_correction_workflow.py  lattice_distortion.py  lattice_grid.py  line_periodicity.py  measurements.py  pair_correlation.py  point_summary.py  preview.py  roi_statistics.py  simple_measurements.py  spec_plot.py  step_edges.py  xmgrace_export.py
probeflow/cli/: __init__.py  __main__.py  _legacy.py  parser.py  processing_ops.py  roi_args.py
probeflow/core/: __init__.py  browse_cache.py  browse_filters.py  common.py  env_check.py  file_type.py  indexing.py  loaders.py  mask.py  metadata.py  op_vocab.py  processing_state.py  resources.py  roi.py  scan_loader.py  scan_model.py  source_identity.py  validation.py
probeflow/dataset_builder/: __init__.py  annotations.py  cache.py  export.py  loading.py  manifest.py  models.py  painting.py  proposals.py  queue.py  quickseg.py  sidecar_state.py  validation.py
probeflow/gui/: __init__.py  _legacy.py  _tooltips.py  angle_overlay.py  app.py  compat.py  config.py  desktop_layout.py  image_canvas.py  image_quick_toolbar.py  lattice_correction_ui.py  lattice_export.py  lattice_grid_tool.py  launcher.py  main_window.py  mask_manager.py  models.py  navbar.py  no_wheel.py  processing.py  rendering.py  roi_context.py  roi_items.py  roi_manager_dock.py  styling.py  tool_manager.py  tooltips.py  tv.py  typography.py  utils.py  workers.py  workspace_window.py
probeflow/io/: __init__.py  common.py  createc_interpretation.py  file_type.py  mask_sidecar.py  roi_sidecar.py  scanflow_acquisition.py  spectroscopy.py  sxm_io.py
probeflow/measurements/: __init__.py  adapters.py  adstat_export.py  export.py  feature_sets.py  features.py  fft_points.py  formatting.py  image.py  models.py  point_stats_io.py  point_table_io.py  raster.py  roi_resolve.py  spectrum.py
probeflow/plugins/: __init__.py  api.py  manifest.py
probeflow/processing/: __init__.py  _image_utils.py  alignment.py  analysis.py  arithmetic.py  background.py  bad_lines.py  bragg.py  display.py  display_state.py  edge_detection.py  filters.py  geometry.py  gui_adapter.py  history.py  image.py  inverse_fft.py  mains_pickup.py  mask_ops.py  op_vocab.py  pdf_export.py  png_export.py  repair.py  state.py  (+3 more)
scripts/: adstat_demo.py  build_macos_app.sh  build_macos_dmg.sh  build_macos_icon.py  build_windows_app.ps1  build_windows_icon.py  build_windows_installer.ps1  collect_python_licenses.py  find_orphan_modules.py  generate_gui_screenshots.py  index_folder.py  migrate_feature_bank.py  notarize_macos_dmg.sh  prepare_qt_release_materials.py  publish_github_release.sh  relocate_python_framework.py  render_adversarial.py  validate_macos_app.py  validate_macos_dmg.sh  validate_windows_app.py
test_data/: nanonis.sxm
tests/: README.md  adversarial_fixtures.py  conftest.py  synthetic_files.py  test_adstat_adapter.py  test_adstat_demo_script.py  test_adstat_export.py  test_adstat_results_dialog.py  test_adstat_validation.py  test_adstat_workbench_dialog.py  test_adversarial.py  test_angle_update_and_dock_restore.py  test_bragg_calibration.py  test_browse_cache.py  test_browse_folder_filter_ui.py  test_browse_folder_filters.py  test_browse_metadata_display.py  test_browse_worker_seams.py  test_calibration_edge_cases.py  test_canvas_item_lifetime.py  test_canvas_selection_interactions.py  test_cli_analysis_commands.py  test_cli_entrypoints.py  test_cli_roi_and_processing.py  test_cli_scan_commands.py  test_command_finder.py  test_common.py  test_core_op_vocab_invariants.py  test_createc_dat_decode.py  test_createc_dat_to_npy.py  test_createc_unit_roundtrip.py  test_dataset_builder.py  test_dataset_builder_view_tray.py  test_definitions_dialog.py  test_display.py  test_display_clip.py  test_display_edge_cases.py  test_display_state.py  test_edge_detection.py  test_edge_detection_adversarial.py  (+130 more)
(+187 files in other folders)
