[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "probeflow"
dynamic = ["version"]
description = "ProbeFlow — STM scan browser, processor, and Createc↔Nanonis toolkit. Browse .sxm scans with colormaps, apply line corrections / background subtraction / smoothing / FFT / grain detection, and convert Createc .dat files to Nanonis .sxm + PNG from either a GUI or a bash-friendly CLI."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
# Major-version ceilings on the two libraries whose breaking releases would
# take the app down wholesale (Qt wrapper-lifetime workarounds are coupled to
# PySide6 internals; numpy 3 will be another 1->2-scale migration). Exact
# known-good versions live in constraints.txt; the weekly dependency-canary
# CI job tests unpinned latest so ceiling bumps are a calendar item, not a
# surprise.
dependencies = [
  "numpy>=1.26,<3",
  "scipy",
  # Security floor: five 2026 CVEs (PSD/FITS/font/PDF parsing) fixed in 12.2.
  "pillow>=12.2",
  "PySide6>=6.7,<7",
  "matplotlib",
  "shapely>=2.0",
  "scikit-image>=0.22",
]

[project.optional-dependencies]
dev      = ["pytest", "vulture", "ruff>=0.15,<0.16", "pre-commit"]
# opencv + scikit-learn power the SIFT-based lattice-vector extraction
# (analysis/lattice.py); both are lazy-imported with a friendly install hint.
lattice  = ["opencv-python", "scikit-learn"]
gwyddion = ["gwyfile"]
# Complete end-user feature set used by standalone desktop distributions.
# Development tools remain in the separate ``dev`` extra so release bundles
# never collect pytest by accident.
desktop  = ["opencv-python", "scikit-learn", "gwyfile"]
all      = ["opencv-python", "scikit-learn", "gwyfile"]

[project.scripts]
probeflow = "probeflow.cli:main"
dat-sxm   = "probeflow.io.converters.createc_dat_to_sxm:main"
dat-png   = "probeflow.io.converters.createc_dat_to_png:main"
dat-npy   = "probeflow.io.converters.createc_dat_to_npy:main"

[project.gui-scripts]
probeflow-gui = "probeflow.gui.launcher:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "probeflow.__version__"}

[tool.setuptools.packages.find]
include = ["probeflow", "probeflow.*"]

[tool.setuptools.package-data]
probeflow = [
  "assets/*.gif",
  "assets/*.png",
  "assets/toolbar/*.png",
  "data/file_cushions/*.bin",
  "data/file_cushions/*.json",
  "data/file_cushions/*.txt",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
  "probeflow/data/file_cushions",
  "test_data",
]

[tool.ruff.lint]
# Catch real bugs (pyflakes). Unused-import / star-import detection (F401/F403/
# F405) is ON globally so dead and duplicate imports can't hide; the genuine
# re-export shims (package __init__s and the few star-import modules) are
# exempted per-file below, and intentional single re-exports use `# noqa: F401`.
select = ["F"]

[tool.ruff.lint.per-file-ignores]
"probeflow/__init__.py" = ["F401", "F403"]
"probeflow/*/__init__.py" = ["F401", "F403"]
"probeflow/cli/__init__.py" = ["F401", "F403"]
"probeflow/gui/__init__.py" = ["F401", "F403"]
"probeflow/gui/processing.py" = ["F401", "F403", "F405"]
